--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,16 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
+    <style>
+      .nav li a.active {
+        font-weight: bold;
+        background: rgba(0,0,0,.5);
+        color: #fff!important;
+      }
+      a {
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
